<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BookMyTable</string>
    <string name="logo">Logo</string>
    <string name="action_settings">Settings</string>
    <string name="btn_register">SIGN UP</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_guest">LOGIN AS GUEST USER</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="signin">SIGN IN</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_booking">BookingActivity</string>
    <string name="title_activity_table_selection">TableSelectionActivity</string>
    <string name="title_activity_booking_confirmation">BookingConfirmationActivity</string>
    <string name="title_activity_checkin">CheckinActivity</string>
    <string name="title_activity_pay_now">PayNowActivity</string>
    <string name="title_activity_payment_details">PaymentDetailsActivity</string>
    <string name="btn_book_table">BOOK A TABLE</string>
    <string name="btn_manage_booking">MANAGE BOOKINGS</string>
    <string name="btn_profile">EDIT PROFILE</string>
    <string name="btn_exit">EXIT</string>
    <string name="btn_cancel">CANCEL</string>
    <string name="btn_back">BACK</string>
    <string name="btn_next">NEXT</string>
    <string name="btn_confirm">CONFIRM</string>
    <string name="btn_table_selection">TABLE SELECTION</string>

    <string name="t1">Table1</string>

    <string-array name="restaurants">
        <item>Bottega Louie</item>
        <item>Water Grill</item>
        <item>Blossom Restaurant</item>
        <item>Chaya Downtown</item>
        <item>Gill\'s Indian Restaurant</item>
        <item>Drago Centro</item>
        <item>New Mikado</item>
    </string-array>

    <string-array name="mm">
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>

    <string-array name="yyyy">
        <item>2014</item>
        <item>2015</item>
        <item>2016</item>
        <item>2017</item>
        <item>2018</item>
        <item>2019</item>
        <item>2020</item>
    </string-array>

</resources>