<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/food_bg">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:alpha="0.95"
            android:contentDescription="@string/logo"
            android:src="@drawable/logo" />
    </LinearLayout>

    <EditText
        android:id="@+id/username"
        style="@style/text_input"
        android:drawableLeft="@drawable/icon_login"
        android:hint="@string/username" />

    <EditText
        android:id="@+id/password"
        style="@style/text_input"
        android:drawableLeft="@drawable/icon_password"
        android:inputType="textPassword"
        android:hint="@string/password" />

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button3"
            style="@style/login_button"
            android:gravity="center"
            android:drawableLeft="@drawable/icon_exit"
            android:text="@string/btn_cancel"
            android:onClick="navigateToMainActivity" />

        <Button
            android:id="@+id/button3"
            style="@style/login_button"
            android:gravity="center"
            android:text="@string/signin"
            android:drawableRight="@drawable/icon_arrow_right"
            android:onClick="login" />
    </LinearLayout>


</LinearLayout>