<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/food_bg" >

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:alpha="0.95"
            android:contentDescription="@string/logo"
            android:src="@drawable/logo" />
    </LinearLayout>

    <Button
        android:id="@+id/button1"
        style="@style/main_button"
        android:drawableLeft="@drawable/icon_add"
        android:text="@string/btn_register" />

    <Button
        android:id="@+id/button2"
        style="@style/main_button"
        android:drawableLeft="@drawable/icon_login"
        android:text="@string/btn_login"
        android:onClick="navigateToLoginActivity" />

    <Button
        android:id="@+id/button3"
        style="@style/main_button"
        android:drawableLeft="@drawable/icon_guest"
        android:text="@string/btn_guest"
        android:onClick="loginAsGuestUser"/>

</LinearLayout>