<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center_vertical"
        android:background="@drawable/food_bg_small"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:contentDescription="@string/logo"
            android:src="@drawable/logo_symbol" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginTop="4dp"
            android:contentDescription="@string/logo"
            android:src="@drawable/logo_small" />
    </LinearLayout>

    <ScrollView
        android:layout_height="fill_parent"
        android:layout_width="match_parent"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp">


            <TextView
                android:id="@+id/textView1"
                style="@style/form_caption"
                android:text="Restaurant: " />

            <Spinner
                android:id="@+id/spinner1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"/>


            <TextView
                android:id="@+id/textView1"
                style="@style/form_caption"
                android:text="Date: "
                android:layout_marginTop="20dp" />

            <DatePicker
                android:id="@+id/datePicker1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:calendarViewShown="false"
                android:layout_gravity="center" />


            <TextView
                android:id="@+id/textView1"
                style="@style/form_caption"
                android:text="Time: "
                android:layout_marginTop="20dp" />

            <TimePicker
                android:id="@+id/timePicker1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center" />


            <TextView
                android:id="@+id/textView1"
                style="@style/form_caption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Guests: "
                android:layout_marginTop="20dp" />

            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp">

                <Button
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="-"
                    android:onClick="decrementGuests"/>

            <EditText
                style="@style/text_input_small"
                android:id="@+id/guests"
                android:inputType="number"
                android:layout_gravity="center"
                android:text="2"/>

                <Button
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="+"
                    android:onClick="incrementGuests"/>

            </LinearLayout>

        </LinearLayout>


    </ScrollView>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="30dp">

        <Button
            android:id="@+id/button3"
            style="@style/small_button"
            android:text="@string/btn_cancel"
            android:onClick="navigateToMenuActivity"
            android:drawableLeft="@drawable/icon_arrow_left"
            android:layout_width="wrap_content"
            android:layout_weight="0"/>

        <Button
            android:id="@+id/button4"
            style="@style/small_button"
            android:drawableRight="@drawable/icon_arrow_right"
            android:text="@string/btn_table_selection"
            android:onClick="navigateToTableSelectionActivity" />

    </LinearLayout>

</LinearLayout>